<resources>
    <string name="app_name" translatable="false">PassIt</string>
    <string name="catchphrase" translatable="false">Pass your experience!</string>
    <string name="catchphrase_capital" translatable="false">PASS YOUR EXPERIENCE</string>
    <string name="api_url" translatable="false">http://192.168.1.18:8000/api/</string>
    <string name="buffer" translatable="false">DrDariuszKoscielnik</string>
    <string name="dashboard">Dashboard</string>
    <string name="news">News</string>
    <string name="subjects">Subjects</string>
    <string name="lecturers">Lecturers</string>
    <string name="memes">Memes</string>
    <string name="hi">Hi!</string>
    <string name="login_continue">Log in to continue.</string>
    <string name="username">index number</string>
    <string name="password">password</string>
    <string name="don_t_remember_password">I don\'t remember my password.</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change your password</string>
    <string name="accessibility">Accessibility</string>
    <string name="logout">Logout</string>
    <string name="exam_calendar">Exam calendar</string>
    <string name="fos_choice">Displayed field of study</string>
    <string name="contrast">Increase contrast</string>
    <string name="curr_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Repeat new password</string>
    <string name="success_password">The new password has successfully been set.</string>
    <string name="mismatch_password">Entered new passwords do not match.</string>
    <string name="wrong_password">The entered password is not correct.</string>
    <string name="rep">\@Representative</string>
    <string name="description">Description</string>
    <string name="materials">Materials</string>
    <string name="instructors">Instructors</string>
    <string name="general">General</string>
    <string name="degree">Degree: </string>
    <string name="consultations">Consultation times: </string>
    <string name="contact">Contact: </string>
    <string name="opinions">Opinions: </string>
    <string name="add_news">Add news</string>
    <string name="edit_news">Edit news</string>
    <string name="delete_news">Delete news</string>
    <string name="news_title">News title</string>
    <string name="news_content">News content…</string>
    <string name="news_attachment">Add an attachment</string>
    <string name="news_remove">Are you sure you want to remove this?</string>
    <string name="add_opinion">Add an opinion</string>
    <string name="opinion_content">Opinion content</string>
    <string name="add_meme">Add a meme</string>
    <string name="meme_photo">Add a photo</string>
    <string name="meme_up">Top text</string>
    <string name="meme_down">Bottom text</string>
    <string name="failed_login">No active account found with the given credentials</string>
    <string name="remove_news_confirm">Are you sure you want to delete this news?</string>

    <string name="plus" translatable="false">Plus</string>
    <string name="arrow" translatable="false">Arrow</string>
    <string name="user" translatable="false">User</string>
    <string name="calendar" translatable="false">Calendar</string>
    <string name="xxx" translatable="false">XX.XX.XXXX</string>
    <string name="check" translatable="false">Yah</string>
    <string name="cross" translatable="false">Nah</string>
    <string name="ellipsis" translatable="false">…</string>


    <string name="todo" translatable="false">\nTODO EXPAND</string>

    <string name="day1">mon.</string>
    <string name="day2">tue.</string>
    <string name="day3">wed.</string>
    <string name="day4">thu.</string>
    <string name="day5">fri.</string>
    <string name="day6">sat.</string>
    <string name="day7">sun.</string>

    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
