<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".dialogfragment.PatchNewsDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/buttonCheckEdit"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:contentDescription="@string/check"
                android:focusable="true"
                android:src="@drawable/ic_check" />

            <ImageView
                android:id="@+id/buttonCrossEdit"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:contentDescription="@string/cross"
                android:focusable="true"
                android:src="@drawable/ic_cross" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutUserPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutButtons"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/textLayoutEditNews"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:text="@string/edit_news"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEditNewsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textLayoutEditNews"
                android:hint="@string/news_title"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextEditNewsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEditNewsTitle"
                android:hint="@string/news_content"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no" />


        </RelativeLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>