<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="?attr/actionBarSize"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".fragments.SettingsFragment">

    <RelativeLayout
        android:id="@+id/relativeLayoutUserPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:contentDescription="@string/user"
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/textViewUserNameSurname"
            style="@style/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageViewUser"
            android:paddingStart="27dp"
            android:paddingEnd="27dp"
            android:paddingTop="13dp"
            android:textSize="18sp"
            tools:text="Janowski Lucjan" />

        <TextView
            android:id="@+id/textViewChangePassword"
            style="@style/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserNameSurname"
            android:layout_toEndOf="@id/imageViewUser"
            android:paddingStart="27dp"
            android:paddingEnd="27dp"
            android:paddingTop="8dp"
            android:text="@string/change_password"
            android:textSize="14sp" />


    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayoutUserPart"
        android:background="?attr/textColor" />

    <RelativeLayout
        android:id="@+id/relativeLayoutAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutUserPart"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutUserPartHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessibility"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imageViewExpander"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/arrow"
                android:src="@drawable/ic_arrow_down" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutUserPartBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayoutUserPartHeader"
            android:paddingTop="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textViewContrast"
                style="@style/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrast" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/textViewContrast"
                android:paddingStart="22dp"
                android:paddingEnd="22dp" />

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayoutAccess"
        android:background="?attr/textColor" />

    <RelativeLayout
        android:id="@+id/relativeLayoutFos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutAccess"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutFosHeader"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fos_choice"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imageViewExpander2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/arrow"
                android:src="@drawable/ic_arrow_down" />
        </RelativeLayout>

        <RelativeLayout
            android:paddingTop="16dp"
            android:id="@+id/relativeLayoutFosBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayoutFosHeader"
            android:visibility="gone">

            <TextView
                android:id="@+id/textViewFos"
                style="@style/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true" />

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayoutFos"
        android:background="?attr/textColor" />


    <TextView
        android:id="@+id/textViewLogout"
        style="@style/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="?attr/actionBarSize"
        android:text="@string/logout"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp" />


</RelativeLayout>