<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor"
    tools:context=".fragment.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/toolbarColor"
            android:backgroundTint="?attr/toolbarColor"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="16dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/arrowBack"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    android:id="@+id/textViewToolbar"
                    style="@style/toolbarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/arrowBack"
                    android:paddingStart="32dp"
                    android:text="@string/change_password"
                    android:textColor="?attr/textColor"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:background="?attr/backgroundColor"

            android:id="@+id/relativeLayoutUserPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarDialog"
            android:padding="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/textLayoutCurrentPassword"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/curr_password"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textLayoutCurrentPassword"
                app:passwordToggleDrawable="@drawable/ic_eye_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/curr_password"

                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textLayoutNewPassword"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextLayoutCurrentPassword"
                android:paddingTop="25dp"
                android:text="@string/new_password"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textLayoutNewPassword"
                app:passwordToggleDrawable="@drawable/ic_eye_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textLayoutConfirmPassword"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextLayoutNewPassword"
                android:paddingTop="25dp"
                android:text="@string/confirm_password"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textLayoutConfirmPassword"
                app:passwordToggleDrawable="@drawable/ic_eye_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:background="?attr/backgroundColor"

            android:id="@+id/relativeLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutUserPart"
            android:minHeight="100dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="29dp">

            <ImageView
                android:id="@+id/buttonCheck"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/check"
                android:src="@drawable/ic_check" />

            <ImageView
                android:id="@+id/buttonCross"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/cross"
                android:src="@drawable/ic_cross" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>