<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".dialogfragment.AddNewsDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/buttonCheck"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:contentDescription="@string/check"
                android:focusable="true"
                android:src="@drawable/ic_check" />

            <ImageView
                android:id="@+id/buttonCross"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:contentDescription="@string/cross"
                android:focusable="true"
                android:src="@drawable/ic_cross" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutUserPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutButtons"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/textLayoutAddNews"
                style="@style/bodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/add_news"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/buttonAttach"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:contentDescription="@string/check"
                android:focusable="true"
                android:src="@drawable/ic_attach" />

            <RelativeLayout
                android:id="@+id/relativeLayoutAttachment"
                android:layout_width="wrap_content"
                android:layout_below="@+id/textLayoutAddNews"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/buttonAttachCross"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:contentDescription="@string/cross"
                    android:focusable="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_cross"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textViewUrl"
                    style="@style/bodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/buttonAttachCross"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:visibility="gone"
                    tools:text="lena_image_very_long_uri_very_very_so_that_it_overflows_this_view_well.png" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editTextNewsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutAttachment"
                android:hint="@string/news_title"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextNewsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextNewsTitle"
                android:hint="@string/news_content"
                android:inputType="text"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextNewsContent"
                android:layout_gravity="center_vertical"
                android:background="?attr/gradientBorderNewsCal"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerSubjectGroupAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>